Fixed weird spacing issue due to scrollbar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,12 @@ MIT License http://opensource.org/licenses/MIT
 
 */
 
-html, body {
+html {
+  overflow-y: scroll;
+}
+
+html,
+body {
   height: auto;
   min-height: 100%;
 }
