--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -36,7 +36,7 @@
 }
 
 .post-footer .avatar {
-  margin: 2rem 0;
+  margin: 0;
   width: 100px;
   border-radius: 50%;
 }
@@ -46,13 +46,9 @@
   width: auto;
   font-weight: 300;
   margin: 0;
-  padding: .25em 0;
+  padding: 0;
   color: #7a7a7a;
   font-style: italic;
-}
-
-.related-post-title {
-  border-bottom: thin solid #f3f3f3;
 }
 
 .post-header {
